views/resources/styles/backoffice.css
/* ... */
.BackOfficeLayout .ContentTypePicker .label .empty_option {
    padding-left: 0;
}

.BackOfficeLayout .ContentTypePicker .selector_content {
    max-height: 20em;
    min-width: 16em;
    overflow: auto;
}

.BackOfficeLayout .ContentTypePicker .entry_label {
    display: inline;
    margin-left: 0.3em;
}

/* Paging
-----------------------------------------------------------------------------*/

.BackOfficeLayout .item_count,
.BackOfficeLayout .page_size,
.BackOfficeLayout .Pager {
    float: right;
    font-size: 85%;
    margin-bottom: 0.75em;
    margin-left: 2em;
}

.BackOfficeLayout .item_count, .Pager {
    padding-top: 0.3em;
}

.BackOfficeLayout .page_size input {
    font-size: inherit;
    width: 2.5em;
    margin-left: 0.4em;
}

.BackOfficeLayout .Pager * {
    float: left;
    display: block;
}

.BackOfficeLayout .Pager .previous {
    margin-left: 0.3em;
}

.BackOfficeLayout .Pager .next {
    margin-right: 0.3em;
}

.BackOfficeLayout .Pager .page_links {
    margin-left: 0.8em;
    margin-right: 0.8em;
}

.BackOfficeLayout .Pager .page_links a + a {
    margin-left: 0.5em;
}

.BackOfficeLayout .Pager .page_links a.selected {
    font-weight: bold;
}

.BackOfficeLayout .no_results {
    margin-top: 2em;
    border: 1px dotted rgb(200,160,120);
    padding: 0.5em;
}

/* Tree content view
-----------------------------------------------------------------------------*/

.BackOfficeLayout .TreeContentView .expander {
    margin-right: 0.3em;
}

.BackOfficeLayout .TreeContentView .expander img {
    vertical-align: middle;
}

.BackOfficeLayout .TreeContentView .depth_level {
    padding-left: 1.8em;
}

.BackOfficeLayout .TreeContentView .leaf label {
    margin-left: 1.5em;
}

/* History
-----------------------------------------------------------------------------*/

.BackOfficeHistoryView td.changes ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.BackOfficeHistoryView td.changes li {
    background-position: left center;
    background-repeat: no-repeat;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
    padding-left: 1.6em;
}

.BackOfficeHistoryView td.changes li + li {
    margin-top: 0.3em;
}

.BackOfficeHistoryView td.changes li.create {
    background-image: url(../images/new_small.png);
}

.BackOfficeHistoryView td.changes li.modify {
    background-image: url(../images/edit_small.png);
}

.BackOfficeHistoryView td.changes li.delete {
    background-image: url(../images/delete_small.png);
}

/* Errors and success
-----------------------------------------------------------------------------*/
.BackOfficeLayout .success {
    padding: 0.5em;
    border: 1px solid rgb(200,220,200);
    background-color: rgb(220,240,220);
}

.BackOfficeLayout .error_box {
    border: 1px dotted rgb(200,160,120);
    background-color: rgb(245,230,215);
    padding: 0.5em;
    margin: 1em;
}

.BackOfficeLayout .error_box li {
    list-style-type: none;
}

.BackOfficeLayout .error_box li + li {
    margin-top: 0.2em;
}

.BackOfficeLayout .error_box li em {
    font-style: normal;
    font-weight: bold;
    color: rgb(135,35,10);
}

.BackOfficeLayout .field .error {
    border: 1px solid rgb(200,160,120) !important;
    background-color: rgb(245,230,215) !important;
}

/* Edit form
-----------------------------------------------------------------------------*/

.BackOfficeItemView .body {
    position: absolute;
    left: 0.7em;
    right: 0.7em;
    top: 4.5em;
    bottom: 0;
}

.BackOfficeItemView .navigation {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
}

.BackOfficeItemView .navigation .section_entry {
    z-index: 1;
    margin-left: 0;
    margin-right: 0.2em;
}

.BackOfficeItemView .edit_form_frame {
    border: 1px solid rgb(200,210,220);
    border-top: none;
    z-index: 0;
    clear: both;
    position: absolute;    
    top: 2.8em;
    bottom: 4em;
    left: 0;
    right: 0;
    overflow: auto;
}

.BackOfficeItemView .buttons {
    position: absolute;
    bottom: 0em;
    left: 0;
    right: 0;
}

.BackOfficeItemView .edit_form {
    padding: 0;
    position: absolute;
    top: 2.3em;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
}

.BackOfficeItemView .draft_box {
    padding: 0.5em;
    margin-bottom: 1.5em;
    border: 1px solid rgb(235,227,175);
    font-size: 85%;
}

.BackOfficeItemView .draft_box strong {
    color: rgb(75,50,25);
}

.BackOfficeItemView .draft_box .draft_actions {
    text-align: right;
}

.BackOfficeItemView .draft_box .draft_actions button {
    margin-left: 0.3em;
}

.BackOfficeEditView .edit_form .fields {
    clear: both;
}

.BackOfficeItemView .edit_form_toolbar {
    border-bottom: 1px solid rgb(230,235,240);
    height: 2em;
    padding-top: 0.3em;
    padding-right: 0.3em;
}

.BackOfficeItemView .translations_selector {
    font-size: 85%;
    float: right;
}

.BackOfficeItemView .translations_selector .label {
    display: block;
}

.BackOfficeEditView .translations_selector .selector_content {
    list-style-type: none;
    padding-right: 0.1;
    right: 0;
}

.BackOfficeEditView .translations_selector .selector_content li {
    clear: both;
    margin: 0;
    padding: 0;
}

.BackOfficeEditView .translations_selector .language {
    float: left;
    height: 2em;
}

.BackOfficeEditView .translations_selector button {
    float: right;
    margin: 0;
    padding: 0;
    cursor: pointer;
    border: none;
    background: none;
}

.BackOfficeEditView .translations_selector.scripted .selector_content {
    list-style-type: none;
    padding-right: 0.1;
}

.BackOfficeEditView .translations_selector.scripted .selector_content li {
    clear: both;
    margin: 0;
    padding: 0;
}

.BackOfficeEditView .translations_selector.scripted .selector_content li input {
    float: left;
}

.BackOfficeEditView .ItemSelector {
    padding: 0.1em;
}

.BackOfficeEditView .ItemSelector button {
    width: 18.5em;
}
/* ... */

